eager-feedback-app.css
/* ... */
@keyframes eager-feedback-app-bounce-in-down {
  0%, 60%, 75%, 90%, 100% {
    -webkit-animation-timing-function: cubic-bezier(.215, .610, .355, 1);
    animation-timing-function: cubic-bezier(.215, .610, .355, 1)
  }

  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -3000px, 0);
    transform: translate3d(0, -3000px, 0)
  }

  60% {
    opacity: 1;
    -webkit-transform: translate3d(0, 20px, 0);
    transform: translate3d(0, 20px, 0)
  }

  75% {
    -webkit-transform: translate3d(0, -10px, 0);
    transform: translate3d(0, -10px, 0)
  }

  90% {
    -webkit-transform: translate3d(0, 5px, 0);
    transform: translate3d(0, 5px, 0)
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0)
  }
}

@-webkit-keyframes eager-feedback-app-bounce-out-up {
  20% {
    -webkit-transform: translate3d(0, -10px, 0);
    transform: translate3d(0, -10px, 0)
  }

  40%, 45% {
    opacity: 1;
    -webkit-transform: translate3d(0, 20px, 0);
    transform: translate3d(0, 20px, 0)
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(0, -2000px, 0);
    transform: translate3d(0, -2000px, 0)
  }
}

@keyframes eager-feedback-app-bounce-out-up {
  20% {
    -webkit-transform: translate3d(0, -10px, 0);
    transform: translate3d(0, -10px, 0)
  }

  40%, 45% {
    opacity: 1;
    -webkit-transform: translate3d(0, 20px, 0);
    transform: translate3d(0, 20px, 0)
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(0, -2000px, 0);
    transform: translate3d(0, -2000px, 0)
  }
}

.eager-feedback-app, .eager-feedback-app-feedback-button {
  color: #000 !important;
  box-sizing: border-box !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none
}

  button.eager-feedback-app-feedback-button {
    color: #fff !important;
    outline: none !important;
    font-size: 1em !important;
    background: #000;
    border: 0 !important;
    -webkit-appearance: none !important;
    appearance: none !important;
    position: fixed !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    white-space: nowrap !important;
    height: 2em !important;
    max-width: 20em !important;
    padding: .5em .8em !important;
    line-height: initial !important;
    border-radius: .1875em .1875em 0 0 !important;
    font-weight: bold !important;
    cursor: pointer !important
  }

  button.eager-feedback-app-feedback-button:hover {
    box-shadow: inset 0 0 0 999em rgba(255, 255, 255, .1) !important
  }

  button.eager-feedback-app-feedback-button:hover:active {
    box-shadow: inset 0 0 0 999em rgba(0, 0, 0, .2) !important
  }

  .eager-feedback-app-feedback-button[data-location="left-edge"],
  .eager-feedback-app-feedback-button[data-location="right-edge"] {
    top: 0 !important;
    bottom: 0 !important;
    margin-top: auto !important;
    margin-bottom: auto !important;
  }

  .eager-feedback-app-feedback-button[data-location="left-edge"] {
    left: 0 !important;
    transform: rotate(90deg) translateX(-50%) translateY(-50%) !important;
    transform-origin: 0 50% !important;
  }

  .eager-feedback-app-feedback-button[data-location="right-edge"] {
    right: 0 !important;
    transform: rotate(-90deg) translateX(50%) translateY(-50%) !important;
    transform-origin: 100% 50% !important;
  }

  .eager-feedback-app-feedback-button[data-location="bottom-left-corner"],
  .eager-feedback-app-feedback-button[data-location="bottom-right-corner"] {
    bottom: 0 !important
  }

  .eager-feedback-app-feedback-button[data-location="bottom-left-corner"] {
    left: 3em !important
  }

  .eager-feedback-app-feedback-button[data-location="bottom-right-corner"] {
    right: 3em !important
  }

.eager-feedback-app * {
  color: inherit !important
}

.eager-feedback-app:before, .eager-feedback-app:after, .eager-feedback-app *, .eager-feedback-app *:before, .eager-feedback-app *:after {
  display: block !important;
  box-sizing: inherit !important
}

.eager-feedback-app, .eager-feedback-app * {
  font-family: inherit !important;
  font-size: inherit !important;
  text-decoration: none !important;
  border: 0 !important;
  outline: none !important;
  margin: 0 !important;
  padding: 0 !important
}

.eager-feedback-app {
  position: fixed;
  z-index: 8000;
  top: 0;
  right: 0;
  left: 0;
  max-height: calc(100vh + 5.5em) !important;
  overflow-y: auto !important;
  -webkit-overflow-scrolling: touch !important;
  margin-left: auto !important;
  margin-right: auto !important;
  margin-bottom: 0 !important;
  width: 25em;
  max-width: 100%;
  padding: 6.5em 1.5em 1.5em 1.5em !important;
  margin-top: -5em !important;
  background: #fff !important;
  border-radius: 0 0 .3125em .3125em;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .2), 0 0 50px rgba(0, 0, 0, .2), 0 0 0 10000px rgba(0, 0, 0, 0) !important;
  transition: box-shadow 1s ease !important;
  -webkit-transform: translate3d(0, -100%, 0);
  transform: translate3d(0, -100%, 0)
}

  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
    .eager-feedback-app {
      box-shadow: 0 0 0 .5px rgba(0, 0, 0, .2), 0 0 50px rgba(0, 0, 0, .2), 0 0 0 10000px rgba(0, 0, 0, 0) !important
    }
  }

  .eager-feedback-app::-webkit-scrollbar, .eager-feedback-app::-webkit-scrollbar-thumb {
    height: 10px;
    width: 10px
  }

  .eager-feedback-app::-webkit-scrollbar {
    background: #fff !important;
  }

  .eager-feedback-app::-webkit-scrollbar-thumb {
    border: 3px solid #fff !important;
    border-top-width: 5.1875em !important;
    border-bottom-width: .625em !important;
    background: #aaa !important
  }
/* ... */

